src/Main/MetaDslx.CodeAnalysis.Antlr4/Languages/MetaGenerator/Syntax/InternalSyntax/MetaGeneratorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\Balazs\source\repos\meta-cs\src\Main\MetaDslx.CodeAnalysis.Antlr4\Languages\MetaGenerator\Syntax\InternalSyntax\MetaGeneratorParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MetaDslx.Languages.MetaGenerator.Syntax.InternalSyntax {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class MetaGeneratorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KNamespace=1, KGenerator=2, KUsing=3, KConfiguration=4, KProperties=5, 
		KTemplate=6, KFunction=7, KExtern=8, KReturn=9, KSwitch=10, KCase=11, 
		KType=12, KVoid=13, KEnd=14, KFor=15, KForEach=16, KIn=17, KIf=18, KElse=19, 
		KRepeat=20, KUntil=21, KWhile=22, KLoop=23, KHasLoop=24, KWhere=25, KOrderBy=26, 
		KDescending=27, KSeparator=28, KNull=29, KTrue=30, KFalse=31, KBool=32, 
		KByte=33, KChar=34, KDecimal=35, KDouble=36, KFloat=37, KInt=38, KLong=39, 
		KObject=40, KSByte=41, KShort=42, KString=43, KUInt=44, KULong=45, KUShort=46, 
		KThis=47, KNew=48, KIs=49, KAs=50, KTypeof=51, KDefault=52, TSemicolon=53, 
		TColon=54, TDot=55, TComma=56, TAssign=57, TAssignPlus=58, TAssignMinus=59, 
		TAssignAsterisk=60, TAssignSlash=61, TAssignPercent=62, TAssignAmp=63, 
		TAssignPipe=64, TAssignHat=65, TAssignLeftShift=66, TAssignRightShift=67, 
		TOpenParenthesis=68, TCloseParenthesis=69, TOpenBracket=70, TCloseBracket=71, 
		TOpenBrace=72, TCloseBrace=73, TEquals=74, TNotEquals=75, TArrow=76, TSingleArrow=77, 
		TLessThan=78, TGreaterThan=79, TLessThanOrEquals=80, TGreaterThanOrEquals=81, 
		TQuestion=82, TPlus=83, TMinus=84, TExclamation=85, TTilde=86, TAsterisk=87, 
		TSlash=88, TPercent=89, TPlusPlus=90, TMinusMinus=91, TColonColon=92, 
		TAmp=93, THat=94, TPipe=95, TAnd=96, TXor=97, TOr=98, TQuestionQuestion=99, 
		IdentifierNormal=100, LInteger=101, LDecimal=102, LScientific=103, LDateTimeOffset=104, 
		LDateTime=105, LDate=106, LTime=107, LChar=108, LRegularString=109, LGuid=110, 
		LUtf8Bom=111, LWhitespace=112, LCrLf=113, LLineBreak=114, LLineComment=115, 
		LMultiLineComment=116, LDoubleQuoteVerbatimString=117, TH_TOpenParenthesis=118, 
		TH_TCloseParenthesis=119, KEndTemplate=120, LTemplateLineControl=121, 
		LTemplateOutput=122, LTemplateCrLf=123, LTemplateLineBreak=124, TTemplateStatementStart=125, 
		TTemplateStatementEnd=126, TS_TOpenBracket=127, TS_TCloseBracket=128, 
		DoubleQuoteVerbatimStringLiteralStart=129, COMMENT_START=130;
	public const int
		RULE_main = 0, RULE_namespaceDeclaration = 1, RULE_generatorDeclaration = 2, 
		RULE_usingDeclaration = 3, RULE_configDeclaration = 4, RULE_configProperty = 5, 
		RULE_methodDeclaration = 6, RULE_externFunctionDeclaration = 7, RULE_functionDeclaration = 8, 
		RULE_functionSignature = 9, RULE_paramList = 10, RULE_parameter = 11, 
		RULE_body = 12, RULE_statement = 13, RULE_singleStatement = 14, RULE_singleStatementSemicolon = 15, 
		RULE_variableDeclarationStatement = 16, RULE_variableDeclarationExpression = 17, 
		RULE_variableDeclarationItem = 18, RULE_voidStatement = 19, RULE_returnStatement = 20, 
		RULE_expressionStatement = 21, RULE_ifStatement = 22, RULE_elseIfStatementBody = 23, 
		RULE_ifStatementElseBody = 24, RULE_ifStatementBegin = 25, RULE_elseIfStatement = 26, 
		RULE_ifStatementElse = 27, RULE_ifStatementEnd = 28, RULE_forStatement = 29, 
		RULE_forStatementBegin = 30, RULE_forStatementEnd = 31, RULE_forInitStatement = 32, 
		RULE_whileStatement = 33, RULE_whileStatementBegin = 34, RULE_whileStatementEnd = 35, 
		RULE_whileRunExpression = 36, RULE_repeatStatement = 37, RULE_repeatStatementBegin = 38, 
		RULE_repeatStatementEnd = 39, RULE_repeatRunExpression = 40, RULE_loopStatement = 41, 
		RULE_loopStatementBegin = 42, RULE_loopStatementEnd = 43, RULE_loopChain = 44, 
		RULE_loopChainItem = 45, RULE_loopChainExpression = 46, RULE_loopWhereExpression = 47, 
		RULE_loopRunExpression = 48, RULE_separatorStatement = 49, RULE_switchStatement = 50, 
		RULE_switchStatementBegin = 51, RULE_switchStatementEnd = 52, RULE_switchBranchStatement = 53, 
		RULE_switchBranchHeadStatement = 54, RULE_switchCaseOrTypeIsHeadStatements = 55, 
		RULE_switchCaseOrTypeIsHeadStatement = 56, RULE_switchCaseHeadStatement = 57, 
		RULE_switchTypeIsHeadStatement = 58, RULE_switchTypeAsHeadStatement = 59, 
		RULE_switchDefaultStatement = 60, RULE_switchDefaultHeadStatement = 61, 
		RULE_templateDeclaration = 62, RULE_templateSignature = 63, RULE_templateBody = 64, 
		RULE_templateContentLine = 65, RULE_templateContent = 66, RULE_templateOutput = 67, 
		RULE_templateLineEnd = 68, RULE_templateStatementStartEnd = 69, RULE_templateStatement = 70, 
		RULE_typeArgumentList = 71, RULE_predefinedType = 72, RULE_typeReferenceList = 73, 
		RULE_typeReference = 74, RULE_arrayType = 75, RULE_arrayItemType = 76, 
		RULE_nullableType = 77, RULE_nullableItemType = 78, RULE_genericType = 79, 
		RULE_simpleType = 80, RULE_voidType = 81, RULE_returnType = 82, RULE_expressionList = 83, 
		RULE_variableReference = 84, RULE_rankSpecifiers = 85, RULE_rankSpecifier = 86, 
		RULE_unboundTypeName = 87, RULE_genericDimensionItem = 88, RULE_genericDimensionSpecifier = 89, 
		RULE_anonymousFunctionSignature = 90, RULE_explicitParameter = 91, RULE_implicitParameter = 92, 
		RULE_expression = 93, RULE_qualifiedName = 94, RULE_identifierList = 95, 
		RULE_identifier = 96, RULE_literal = 97, RULE_nullLiteral = 98, RULE_booleanLiteral = 99, 
		RULE_numberLiteral = 100, RULE_integerLiteral = 101, RULE_decimalLiteral = 102, 
		RULE_scientificLiteral = 103, RULE_dateOrTimeLiteral = 104, RULE_dateTimeOffsetLiteral = 105, 
		RULE_dateTimeLiteral = 106, RULE_dateLiteral = 107, RULE_timeLiteral = 108, 
		RULE_charLiteral = 109, RULE_stringLiteral = 110, RULE_guidLiteral = 111;
	public static readonly string[] ruleNames = {
		"main", "namespaceDeclaration", "generatorDeclaration", "usingDeclaration", 
		"configDeclaration", "configProperty", "methodDeclaration", "externFunctionDeclaration", 
		"functionDeclaration", "functionSignature", "paramList", "parameter", 
		"body", "statement", "singleStatement", "singleStatementSemicolon", "variableDeclarationStatement", 
		"variableDeclarationExpression", "variableDeclarationItem", "voidStatement", 
		"returnStatement", "expressionStatement", "ifStatement", "elseIfStatementBody", 
		"ifStatementElseBody", "ifStatementBegin", "elseIfStatement", "ifStatementElse", 
		"ifStatementEnd", "forStatement", "forStatementBegin", "forStatementEnd", 
		"forInitStatement", "whileStatement", "whileStatementBegin", "whileStatementEnd", 
		"whileRunExpression", "repeatStatement", "repeatStatementBegin", "repeatStatementEnd", 
		"repeatRunExpression", "loopStatement", "loopStatementBegin", "loopStatementEnd", 
		"loopChain", "loopChainItem", "loopChainExpression", "loopWhereExpression", 
		"loopRunExpression", "separatorStatement", "switchStatement", "switchStatementBegin", 
		"switchStatementEnd", "switchBranchStatement", "switchBranchHeadStatement", 
		"switchCaseOrTypeIsHeadStatements", "switchCaseOrTypeIsHeadStatement", 
		"switchCaseHeadStatement", "switchTypeIsHeadStatement", "switchTypeAsHeadStatement", 
		"switchDefaultStatement", "switchDefaultHeadStatement", "templateDeclaration", 
		"templateSignature", "templateBody", "templateContentLine", "templateContent", 
		"templateOutput", "templateLineEnd", "templateStatementStartEnd", "templateStatement", 
		"typeArgumentList", "predefinedType", "typeReferenceList", "typeReference", 
		"arrayType", "arrayItemType", "nullableType", "nullableItemType", "genericType", 
		"simpleType", "voidType", "returnType", "expressionList", "variableReference", 
		"rankSpecifiers", "rankSpecifier", "unboundTypeName", "genericDimensionItem", 
		"genericDimensionSpecifier", "anonymousFunctionSignature", "explicitParameter", 
		"implicitParameter", "expression", "qualifiedName", "identifierList", 
		"identifier", "literal", "nullLiteral", "booleanLiteral", "numberLiteral", 
		"integerLiteral", "decimalLiteral", "scientificLiteral", "dateOrTimeLiteral", 
		"dateTimeOffsetLiteral", "dateTimeLiteral", "dateLiteral", "timeLiteral", 
		"charLiteral", "stringLiteral", "guidLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'generator'", "'using'", "'configuration'", "'properties'", 
		"'template'", "'function'", "'extern'", "'return'", "'switch'", "'case'", 
		"'type'", "'void'", "'end'", "'for'", "'foreach'", "'in'", "'if'", "'else'", 
		"'repeat'", "'until'", "'while'", "'loop'", "'hasloop'", "'where'", "'orderby'", 
		"'descending'", "'separator'", "'null'", "'true'", "'false'", "'bool'", 
		"'byte'", "'char'", "'decimal'", "'double'", "'float'", "'int'", "'long'", 
		"'object'", "'sbyte'", "'short'", "'string'", "'uint'", "'ulong'", "'ushort'", 
		"'this'", "'new'", "'is'", "'as'", "'typeof'", "'default'", "';'", "':'", 
		"'.'", "','", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", 
		"'^='", "'<<='", "'>>='", "'('", "')'", null, "']'", "'{'", "'}'", "'=='", 
		"'!='", "'=>'", "'->'", "'<'", "'>'", "'<='", "'>='", "'?'", "'+'", "'-'", 
		"'!'", "'~'", null, "'/'", "'%'", "'++'", "'--'", "'::'", "'&'", "'^'", 
		"'|'", "'&&'", "'^^'", "'||'", "'??'", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "'\"'", 
		null, null, null, null, null, null, null, null, null, null, null, "'@\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KNamespace", "KGenerator", "KUsing", "KConfiguration", "KProperties", 
		"KTemplate", "KFunction", "KExtern", "KReturn", "KSwitch", "KCase", "KType", 
		"KVoid", "KEnd", "KFor", "KForEach", "KIn", "KIf", "KElse", "KRepeat", 
		"KUntil", "KWhile", "KLoop", "KHasLoop", "KWhere", "KOrderBy", "KDescending", 
		"KSeparator", "KNull", "KTrue", "KFalse", "KBool", "KByte", "KChar", "KDecimal", 
		"KDouble", "KFloat", "KInt", "KLong", "KObject", "KSByte", "KShort", "KString", 
		"KUInt", "KULong", "KUShort", "KThis", "KNew", "KIs", "KAs", "KTypeof", 
		"KDefault", "TSemicolon", "TColon", "TDot", "TComma", "TAssign", "TAssignPlus", 
		"TAssignMinus", "TAssignAsterisk", "TAssignSlash", "TAssignPercent", "TAssignAmp", 
		"TAssignPipe", "TAssignHat", "TAssignLeftShift", "TAssignRightShift", 
		"TOpenParenthesis", "TCloseParenthesis", "TOpenBracket", "TCloseBracket", 
		"TOpenBrace", "TCloseBrace", "TEquals", "TNotEquals", "TArrow", "TSingleArrow", 
		"TLessThan", "TGreaterThan", "TLessThanOrEquals", "TGreaterThanOrEquals", 
		"TQuestion", "TPlus", "TMinus", "TExclamation", "TTilde", "TAsterisk", 
		"TSlash", "TPercent", "TPlusPlus", "TMinusMinus", "TColonColon", "TAmp", 
		"THat", "TPipe", "TAnd", "TXor", "TOr", "TQuestionQuestion", "IdentifierNormal", 
		"LInteger", "LDecimal", "LScientific", "LDateTimeOffset", "LDateTime", 
		"LDate", "LTime", "LChar", "LRegularString", "LGuid", "LUtf8Bom", "LWhitespace", 
		"LCrLf", "LLineBreak", "LLineComment", "LMultiLineComment", "LDoubleQuoteVerbatimString", 
		"TH_TOpenParenthesis", "TH_TCloseParenthesis", "KEndTemplate", "LTemplateLineControl", 
		"LTemplateOutput", "LTemplateCrLf", "LTemplateLineBreak", "TTemplateStatementStart", 
		"TTemplateStatementEnd", "TS_TOpenBracket", "TS_TCloseBracket", "DoubleQuoteVerbatimStringLiteralStart", 
		"COMMENT_START"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MetaGeneratorParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MetaGeneratorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MetaGeneratorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MetaGeneratorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MainContext : ParserRuleContext {
		public NamespaceDeclarationContext namespaceDeclaration() {
			return GetRuleContext<NamespaceDeclarationContext>(0);
		}
		public GeneratorDeclarationContext generatorDeclaration() {
			return GetRuleContext<GeneratorDeclarationContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(MetaGeneratorParser.Eof, 0); }
		public UsingDeclarationContext[] usingDeclaration() {
			return GetRuleContexts<UsingDeclarationContext>();
		}
		public UsingDeclarationContext usingDeclaration(int i) {
			return GetRuleContext<UsingDeclarationContext>(i);
		}
		public ConfigDeclarationContext configDeclaration() {
			return GetRuleContext<ConfigDeclarationContext>(0);
		}
		public MethodDeclarationContext[] methodDeclaration() {
			return GetRuleContexts<MethodDeclarationContext>();
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return GetRuleContext<MethodDeclarationContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaGeneratorParserVisitor<TResult> typedVisitor = visitor as IMetaGeneratorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 224; namespaceDeclaration();
			State = 225; generatorDeclaration();
			State = 229;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KUsing) {
				{
				{
				State = 226; usingDeclaration();
				}
				}
				State = 231;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 233;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==KProperties) {
				{
				State = 232; configDeclaration();
				}
			}

			State = 238;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KTemplate) | (1L << KFunction) | (1L << KExtern))) != 0)) {
				{
				{
				State = 235; methodDeclaration();
				}
				}
				State = 240;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 241; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceDeclarationContext : ParserRuleContext {
		public ITerminalNode KNamespace() { return GetToken(MetaGeneratorParser.KNamespace, 0); }
		public QualifiedNameContext qualifiedName() {
			return GetRuleContext<QualifiedNameContext>(0);
		}
		public ITerminalNode TSemicolon() { return GetToken(MetaGeneratorParser.TSemicolon, 0); }
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceDeclaration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaGeneratorParserVisitor<TResult> typedVisitor = visitor as IMetaGeneratorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceDeclarationContext namespaceDeclaration() {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_namespaceDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 243; Match(KNamespace);
			State = 244; qualifiedName();
			State = 245; Match(TSemicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GeneratorDeclarationContext : ParserRuleContext {
		public ITerminalNode KGenerator() { return GetToken(MetaGeneratorParser.KGenerator, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode TSemicolon() { return GetToken(MetaGeneratorParser.TSemicolon, 0); }
		public ITerminalNode TColon() { return GetToken(MetaGeneratorParser.TColon, 0); }
		public QualifiedNameContext qualifiedName() {
			return GetRuleContext<QualifiedNameContext>(0);
		}
		public ITerminalNode KFor() { return GetToken(MetaGeneratorParser.KFor, 0); }
		public TypeReferenceContext typeReference() {
			return GetRuleContext<TypeReferenceContext>(0);
		}
		public GeneratorDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_generatorDeclaration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaGeneratorParserVisitor<TResult> typedVisitor = visitor as IMetaGeneratorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGeneratorDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GeneratorDeclarationContext generatorDeclaration() {
		GeneratorDeclarationContext _localctx = new GeneratorDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_generatorDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 247; Match(KGenerator);
			State = 248; identifier();
			State = 251;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TColon) {
				{
				State = 249; Match(TColon);
				State = 250; qualifiedName();
				}
			}

			State = 255;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==KFor) {
				{
